add enabling high resolution timer + update version of dependencies & results of tests + clean up